--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ебалай</title>
-    <link rel="stylesheet" href="./css.css">
+    <style>
+        .main{
+    font-family: monospace;
+    margin-top: 10px;
+    text-align: center;
+    color: black;
+    }
+    </style>
 </head>
 <body>
     <div class="main">
